--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -7,3 +7,31 @@
   border-top: var(--main--border);
   padding-top: 40px;
 }
+
+.more-suggestions__icons {
+  display: flex;
+}
+
+.more-suggestions__icon {
+  margin-right: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.more-sugestions__icon-image {
+  width: 60px;
+  height: 60px;
+  background-color: var(--yellow);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.more-sugestions__icon-image i {
+  font-size: 36px;
+  color: white;
+}
