--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -4,7 +4,7 @@
 
 .more-suggestions {
   margin-top: 50px;
-  border-top: var(--main--border);
+  border-top: var(--main-border);
   padding-top: 40px;
 }
 
