--- a/css/screens/setting.css
+++ b/css/screens/setting.css
@@ -1,4 +1,18 @@
 .settings-setting {
   padding: 20px 0;
   border-bottom: var(--main-border);
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.settings-setting i {
+  opacity: 0.8;
+  margin-right: 20px;
+  font-size: 22px;
+}
+
+.settings-setting-column:last-child {
+  opacity: 0.5;
 }
