--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,6 @@
 :root {
   --yellow: #fae100;
   --horizontal-space: 25px;
-  --main-border: rgba(0, 0, 0, 0.2);
+  --main-border: solid 1px rgba(0, 0, 0, 0.2);
   --gray--color: rgba(0, 0, 0, 0.5);
 }
