--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,6 +3,8 @@
   justify-content: center;
   padding: 5px 3px;
   width: 100%;
+  position: fixed;
+  box-sizing: border-box;
 }
 .status-bar__column {
   width: 33%;
