kakao clone chat page

--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -40,6 +40,7 @@
 .message-row {
   width: 100%;
   display: flex;
+  margin-bottom: 25px;
 }
 
 .message-row img {
@@ -50,7 +51,7 @@
 }
 
 .message__author {
-  margin-bottom: 8px;
+  margin-bottom: 5px;
   display: block;
 }
 
@@ -62,7 +63,9 @@
 .message__bubble {
   background-color: white;
   padding: 13px;
+  font-size: 18px;
   border-radius: 15px;
+  border-top-left-radius: 0px;
   margin-right: 5px;
 }
 
@@ -70,4 +73,20 @@
 .message__author {
   opacity: 0.8;
   font-size: 13px;
+}
+
+.message-row--own {
+  justify-content: flex-end;
+}
+
+.message-row--own .message__bubble {
+  background-color: var(--yellow);
+  border-top-right-radius: 0px;
+  border-top-left-radius: 15px;
+  margin-right: 0px;
+  margin-left: 5px;
+}
+
+.message-row--own .message__info {
+  flex-direction: row-reverse;
 }
