--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -29,3 +29,27 @@
   justify-content: space-between;
   color: var(--gray--color);
 }
+
+@keyframes hideSplahScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash-screen {
+  background-color: var(--yellow);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 122px;
+  animation: hideSplahScreen 0.3s ease-in-out forwards;
+  animation-delay: 2s;
+}
